# magamajo

./: .gitignore  README.md  apps.yaml  flake.nix  setup.md  update.sh
.github/workflows/: fdroid.yml
fdroid/: .gitignore  backup-secrets.sh  fdroid-secrets.tar.gz.gpg
fdroid/metadata/: com.Magamajo.trampoline.yml  com.magamajo.trampoline.yml
fdroid/repo/: entry.json  index-v1.json  index-v2.json  index.html  index.xml
fdroid/repo.backup/: index-v1.json  index.xml
fdroid/repo/assets/: qr_code.html
fdroid/repo/diff/: 1748932437000.json  1748935432000.json  1748936780000.json  1748937068000.json  1749008409000.json  1749094838000.json  1749181237000.json  1749267513000.json  1749354336000.json  1749440739000.json  1749526913000.json  1749613269000.json  1749699657000.json  1749786083000.json  1749872213000.json  1749959132000.json  1750045557000.json  1750131707000.json  1750218125000.json  1750304546000.json  1750390815000.json  1750477066000.json  1750563986000.json  1750650592000.json  1750736549000.json  1750823074000.json  1750909341000.json  1750995786000.json  1751081913000.json  1751168970000.json  1751255286000.json  1751342049000.json  1751427921000.json  1751514346000.json  1751600540000.json  1751686725000.json  1751773769000.json  1751860107000.json  1751946275000.json  1752033074000.json  (+373 more)
metascoop/: flake.nix  go.mod  go.sum  shell.nix
metascoop-rs/: .gitignore  CONVERSION.md  Cargo.toml  README.md
metascoop-rs/src/: apps.rs  file.rs  git.rs  main.rs
metascoop/src/: apps.rs  main.rs  md.rs
(+3 files in other folders)
