[package]
name = "metascoop-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "metascoop"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
octocrab = "0.41"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
regex = "1.11"
unicode-normalization = "0.1"
walkdir = "2.5"
diff = "0.1"
tera = "1.20"
tempfile = "3.13"

[profile.release]
strip = true
lto = true
codegen-units = 1
